<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_screen_title">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="message_support">Написать в поддержку</string>
    <string name="terms_of_service">Пользовательское соглашение</string>
    <string name="share_link">https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="my_email">artem.a.baranov@yandex.ru</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_contents">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="terms_of_service_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="refresh">Обновить</string>
    <string name="connection_problem">Проблемы со связью\n\n Загрузка не удалась. Проверьте\n подключение к интернету</string>
    <string name="no_search_results">Ничего не нашлось</string>
    <string name="you_searched_for">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="track_duration_placeholder">00:00</string>
    <string name="Mediateka">Медиатека</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="you_have_not_created_any_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="your_mediateka_is_empty">Ваша медиатека пуста</string>
    <string name="new_playlist_text">Новый плейлист</string>
    <string name="playlist_title">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="playlist_name_created">Плейлист %1$s создан</string>
    <string name="number_tracks_11_through_19_russian">%1$s треков</string>
    <string name="one_track_russian">%1$s трек</string>
    <string name="number_2_through_4_tracks_russian">%1$s трека</string>
    <string name="number_tracks_other_russian">%1$s треков</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
    <string name="track_already_added_to_playlist">Трек уже добавлен в плейлист %1$s</string>
    <string name="exit_playlist_creation">Завершить создание плейлиста?</string>
    <string name="all_unsaved_changes_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="num_minutes">%1$s  минут</string>
    <string name="want_to_delete_track">Хотите удалить трек?</string>
    <string name="delete_track">Удалить трек</string>
    <string name="are_you_sure_you_want_to_delete_track_from_playlist">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="finish">Завершить</string>
    <string name="from_11_to_19_mins">%1$s минут</string>
    <string name="one_minute">%1$s минута</string>
    <string name="two_to_four_minutes">%1$s минуты</string>
    <string name="few_minutes">%1$s минут</string>
    <string name="no_tracks_in_playlist">В плейлист еще не добавлен ни один трек</string>
    <string name="share">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="playlist_track_list_is_empty">В данном плейлисте нету списка треков, которым можно поделиться</string>
    <string name="delete_playlist_other">Удалить плейлист</string>
    <string name="are_you_sure_you_want_to_delete_this_playlist">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>

</resources>