<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_blue"
    android:clipToOutline="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/panel_header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_marginStart="@dimen/extra_large_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:fontFamily="YS Display"
            android:gravity="top"
            android:lineHeight="26dp"
            android:text="@string/main_screen_title"
            android:textAppearance="@style/title"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/extra_large_margin"
        android:paddingTop="@dimen/extra_large_margin"
        android:paddingBottom="20dp">

        <Button
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/search_button_layout"
            app:backgroundTint="@color/white"
            android:layout_height="0dp"
            android:clickable="true"
            android:layout_weight="1"
            android:background="@drawable/button_big"
            android:layout_marginVertical="@dimen/main_activity_buttons_margin"
            android:textAppearance="@style/body"
            app:icon = "@drawable/search_icon"
            app:iconTint = "@color/yp_black"
            app:iconTintMode = "src_atop"
            app:iconGravity = "textStart"
            style="@style/body"
            android:text="@string/search" />
        <Button
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/playlist_button_layout"
            app:backgroundTint="@color/white"
            android:layout_height="0dp"
            android:clickable="true"
            android:layout_weight="1"
            android:background="@drawable/button_big"
            android:layout_marginVertical="@dimen/main_activity_buttons_margin"
            android:textAppearance="@style/body"
            app:icon = "@drawable/playlist_icon"
            app:iconTint = "@color/yp_black"
            app:iconTintMode = "src_atop"
            app:iconGravity = "textStart"
            android:gravity="center"
            android:text="@string/media"
            style="@style/body"/>
        <Button
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/settings_button_layout"
            app:backgroundTint="@color/white"
            android:layout_height="0dp"
            android:clickable="true"
            android:layout_weight="1"
            android:background="@drawable/button_big"
            android:layout_marginVertical="@dimen/main_activity_buttons_margin"
            android:textAppearance="@style/body"
            app:icon="@drawable/settings_icon"
            app:iconTint = "@color/yp_black"
            app:iconTintMode = "src_atop"
            app:iconGravity = "textStart"
            android:gravity="center"
            android:text="@string/settings"
            style="@style/body"/>


    </LinearLayout>

</LinearLayout>