<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".ui.mediateka.PlaylistCreationFragment">

    <ImageButton
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:backgroundTint="?attr/colorPrimary"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorOnPrimary" />

    <TextView
        android:id="@+id/screen_title_tv"
        style="@style/title_black"
        android:layout_marginStart="@dimen/medium_margin"
        android:layout_marginTop="14dp"
        android:text="@string/new_playlist_text"
        app:layout_constraintStart_toEndOf="@id/back_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTag="title_tv"/>
    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/top_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"

        app:constraint_referenced_tags="title_tv"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/playlist_cv"
        android:background="?attr/colorPrimary"
        android:layout_width="0dp"
        app:cardCornerRadius="8dp"
        android:layout_height="0dp"
        app:cardElevation="0dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="42dp"
        android:adjustViewBounds="true"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_barrier"
        app:layout_constraintBottom_toTopOf="@id/playlist_title_tl"
        app:layout_constraintVertical_bias="0.0">
        <androidx.appcompat.widget.AppCompatImageView
            android:background="?attr/colorPrimary"
            android:id="@+id/playlist_image_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/image_picker_background" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_title_tl"
        style="@style/CustomOutlineBox"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/playlist_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_cv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_title_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_description_tl"
        style="@style/CustomOutlineBox"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_title_tl"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_description_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_regular"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_playlist_btn"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/create_playlist_button_background"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlist_description_tl"
        android:layout_marginTop="32dp"
        app:layout_constraintVertical_bias="1.0"/>


</androidx.constraintlayout.widget.ConstraintLayout>